// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-link component should apply the 'dark' theme styling and ic-link styling: link-dark-theme 1`] = `
<ic-link class="ic-link ic-theme-dark" exportparts="link" href="test-href" theme="dark">
  <template shadowrootmode="open">
    <a class="link" href="test-href" part="link" tabindex="0">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'download' attribute to the anchor element: download-link 1`] = `
<ic-link class="ic-link" download="test-download" exportparts="link">
  <template shadowrootmode="open">
    <a download="test-download" part="link" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'download' attribute to the anchor element: download-link-false 1`] = `
<ic-link class="ic-link" download="test-download" exportparts="link">
  <template shadowrootmode="open">
    <a part="link" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'download' attribute to the anchor element: download-link-true 1`] = `
<ic-link class="ic-link" download="test-download" exportparts="link">
  <template shadowrootmode="open">
    <a download="" part="link" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'href' attribute and ic-link styling to the anchor element: default-link-href 1`] = `
<ic-link class="ic-link" exportparts="link" href="test-href">
  <template shadowrootmode="open">
    <a class="link" href="test-href" part="link" tabindex="0">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'hreflang' attribute to the anchor element: default-link-hreflang 1`] = `
<ic-link class="ic-link" exportparts="link" hreflang="test-hreflang">
  <template shadowrootmode="open">
    <a hreflang="test-hreflang" part="link" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'referrerpolicy' attribute to the anchor element: default-link-referrerpolicy 1`] = `
<ic-link class="ic-link" exportparts="link" referrerpolicy="no-referrer">
  <template shadowrootmode="open">
    <a part="link" referrerpolicy="no-referrer" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'rel' attribute to the anchor element: default-link-rel 1`] = `
<ic-link class="ic-link" exportparts="link" rel="test-rel">
  <template shadowrootmode="open">
    <a part="link" rel="test-rel" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should apply the 'target' attribute to the anchor element: default-link-target 1`] = `
<ic-link class="ic-link" exportparts="link" target="test-target">
  <template shadowrootmode="open">
    <a part="link" tabindex="-1" target="test-target">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should get theme from context: alert-theme-context 1`] = `
<ic-alert message="This has an action" role="alert" style="--ic-alert-min-height: 3.5rem;">
  <template shadowrootmode="open">
    <div class="container container-neutral">
      <div class="alert-icon-container">
        <div class="divider divider-neutral"></div>
        <span class="alert-icon icon-neutral svg-container">
          svg
        </span>
      </div>
      <div class="alert-content">
        <div class="alert-message">
          <slot name="message">
            <ic-typography variant="body">
              This has an action
            </ic-typography>
          </slot>
        </div>
        <div class="alert-action-container">
          <slot name="action"></slot>
        </div>
      </div>
      <div class="dismiss-icon-container"></div>
    </div>
  </template>
  <ic-link class="ic-link" exportparts="link" slot="action">
    <template shadowrootmode="open">
      <a part="link" tabindex="-1">
        <slot></slot>
      </a>
    </template>
    Theme context link
  </ic-link>
</ic-alert>
`;

exports[`ic-link component should render a link by default with the correct text: default-link 1`] = `
<ic-link class="ic-link" exportparts="link">
  <template shadowrootmode="open">
    <a part="link" tabindex="-1">
      <slot></slot>
    </a>
  </template>
  IC Link Test
</ic-link>
`;

exports[`ic-link component should render a slotted link: slotted-link 1`] = `
<ic-link class="ic-link" exportparts="link">
  <template shadowrootmode="open">
    <slot name="router-item"></slot>
  </template>
  <ic-link class="ic-link" exportparts="link" slot="router-item">
    <template shadowrootmode="open">
      <a part="link" tabindex="-1">
        <slot></slot>
      </a>
    </template>
    Slotted Link
  </ic-link>
</ic-link>
`;

exports[`ic-link component should render an 'open in new' icon when target is blank: default-link-target-blank 1`] = `
<ic-link class="ic-link" exportparts="link" target="_blank">
  <template shadowrootmode="open">
    <a part="link" tabindex="-1" target="_blank">
      <slot></slot>
      <span class="ic-link-open-in-new-icon">
        svg
      </span>
    </a>
  </template>
  IC Link Test
</ic-link>
`;
